--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,8 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
+ *= require @coreui/coreui/dist/css/coreui.min
+ *= require @fortawesome/fontawesome-free/css/fontawesome.min
+ *= require ./global
  *= require_self
  */
