--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>RemitanoYt</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
-
-  <body>
-    <%= yield %>
-  </body>
+<html lang="nl">
+<head>
+  <title>ASE</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
+<body class="c-app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show">
+<div class="c-wrapper">
+  <%= render "layouts/header" %>
+  <div class="c-body">
+    <main class="c-main">
+      <div class="container-fluid">
+        <div id="js__flash-area">
+          <%#= render "layouts/messages" %>
+        </div>
+        <%= yield %>
+      </div>
+    </main>
+  </div>
+  <footer class="c-footer">
+    <div><a href="https://coreui.io">Bolips Order</a> &copy; 2021 creativeLabs.</div>
+    <div class="ml-auto">Powered by&nbsp;<a href="#">Amshan</a></div>
+  </footer>
+</div>
+</body>
 </html>
