--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -11,7 +11,7 @@
           <% end %>
         </ul>
       </div>
-    <% else %>
+    <% elsif message.kind_of?(String) %>
       <div class="alert alert-<%= flash_type message_type %>">
         <button type="button" class="close" data-dismiss="alert">×</button>
         <%= message %>
