--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <main class="c-main">
       <div class="container-fluid">
         <div id="js__flash-area">
-          <%#= render "layouts/messages" %>
+          <%= render "layouts/messages" %>
         </div>
         <%= yield %>
       </div>
