--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-  <title>ASE</title>
+  <title>Remitano</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -21,10 +21,6 @@
       </div>
     </main>
   </div>
-  <footer class="c-footer">
-    <div><a href="https://coreui.io">Bolips Order</a> &copy; 2021 creativeLabs.</div>
-    <div class="ml-auto">Powered by&nbsp;<a href="#">Amshan</a></div>
-  </footer>
 </div>
 </body>
 </html>
