--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,5 +13,6 @@
  *= require @coreui/coreui/dist/css/coreui.min
  *= require @fortawesome/fontawesome-free/css/fontawesome.min
  *= require ./global
+ *= require ./movies
  *= require_self
  */
