--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,1 +1,9 @@
-<button class="btn btn-primary">Hello</button>
+<div id="movies" class="row">
+  <div class="col-10 offset-1 col-md-8 offset-md-2">
+    <% if @movies.size.positive? %>
+      <%= render @movies %>
+    <% else %>
+      <span>No data</span>
+    <% end %>
+  </div>
+</div>
