--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -5,9 +5,18 @@
     </iframe>
   </div>
   <div class="col-8">
-    <h5><%= link_to movie.title, movie.youtube_full_url, class:"text-danger movie_title" %></h5>
-    <div class="author mt-2">
-      <strong>Shared by:</strong> <%= movie.user.email %>
+    <div class="d-flex">
+      <div class="w-100">
+        <h5><%= link_to movie.title, movie.youtube_full_url, class:"text-danger movie_title" %></h5>
+        <div class="author mt-2">
+          <strong>Shared by:</strong> <%= movie.user.email %>
+        </div>
+      </div>
+      <% if current_user.present? %>
+        <div class="vote float-right js--vote-state-<%= movie.id %>">
+          <%= render 'movies/vote_state', movie: movie %>
+        </div>
+      <% end %>
     </div>
     <div class="description mt-2">
       <strong>Description:</strong>
