--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,8 +1,8 @@
-<div class="row">
+<div class="row" id="new-movie">
   <div class="col-10 offset-1 col-sm-8 offset-sm-2 col-md-6 offset-md-3">
     <%= form_with model: @movie, remote: true do |f| %>
-      <fieldset class="p-4" style="border: solid 1px black">
-        <legend style="width: auto">Share a youtube video</legend>
+      <fieldset class="p-4">
+        <legend class="w-auto">Share a youtube video</legend>
         <div class="row form-group">
           <div class="col-4">
             <label>Youtube URL: </label>
